--- a/HW3MakeOrderRequest/web/WEB-INF/web.xml
+++ b/HW3MakeOrderRequest/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	 version="3.1">
     
     <welcome-file-list>
-    <welcome-file>MakeOrderRequest.jsp</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
 </welcome-file-list>
     <session-config>
         <session-timeout>
